--- a/Tugas BMI.ipynb
+++ b/Tugas BMI.ipynb
@@ -11,6 +11,7 @@
      "text": [
       "Weight = 45\n",
       "Height = 150\n",
+      "Nilai BMI :  20.0\n",
       "Kategori BMI : \n",
       "Normal (Healthy Weight)\n"
      ]
@@ -20,8 +21,9 @@
     "weight = input(\"Weight = \")\n",
     "height = input(\"Height = \")\n",
     "\n",
-    "BMI = int(weight) / ((float(height)/100)**2)\n",
+    "BMI = float(weight) / ((float(height)/100)**2)\n",
     "\n",
+    "print (\"Nilai BMI : \", BMI)\n",
     "print (\"Kategori BMI : \")\n",
     "\n",
     "if BMI < 15:\n",
